# myworkfile

./: CMakeLists.txt  README.md
.github/workflows/: release-build.yml
docs/: abaqus_static_alignment_plan.md  developer_manual_cn.md  theory_manual_cn.md  user_guide_cn.md
examples/: A3_1.inp  advanced_keywords.inp  c3d8_linear.inp  cantilever_solid_2000e.inp  classic_bar_tension.inp  classic_beam_tip_load.inp  classic_solid_patch.inp  contact_two_blocks_144e.inp  linear_truss.inp  nonlinear_contact_field_output.inp  nonlinear_truss.inp  solid_block_200e.inp  truss_plastic.inp
include/: fem_types.hpp  inp_parser.hpp  solver.hpp  vtk_writer.hpp
scripts/: deploy_macos_m4.sh  deploy_windows.bat  deploy_windows.ps1  package_release_local.sh
src/: inp_parser.cpp  main.cpp  solver.cpp  vtk_writer.cpp
